버젼 정보 및 구성 방법